Colaboratory を使用して作成しました

--- a/learnreact.ipynb
+++ b/learnreact.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "learnreact.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOs2tEP0L0oqkOKQd6ASKJ8",
+      "authorship_tag": "ABX9TyPEscwqsaYcgOabujV+fwB5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,14 +33,11 @@
       "source": [
         "# メモ\n",
         "\n",
-        "`Colab`で`React`を学ぶ。colabにreactは関係ないが、ただのノートとして使う。\n",
+        "`Colab`で`React`を学ぶ。colabにreactは関係ないが、ノートとして使う。\n",
         "\n",
-        "いまはまずは`dotinstall`のReact入門をやっている。\n",
+        "`dotinstall`のReact入門を読んでいる。\n",
         "\n",
-        "とりあえずの方針。\n",
-        "1. React + JSXとする。TypeScriptはやらない。\n",
-        "1. すでにElmで学んだ部分があるので、その分の理解は早い。例えば、`if`は基本的には使わないとか。\n",
-        "1. 理解のためにjavascriptで書いてみて、コードセルで`%%javascript`マジックコマンドで実行して確認する、とかしたい。\n"
+        "React + JSXとする。TypeScriptはやらない。\n"
       ]
     },
     {
@@ -50,12 +47,13 @@
         "colab_type": "text"
       },
       "source": [
-        "# 導入\n",
-        "\n",
-        "React は Facebook が中心に開発した JavaScript のライブラリー。ドットインストールの React入門では Elm の一番最初の Counter に相当するウェブアプリをつくっている。\n",
+        "React は Facebook が中心に開発した JavaScript のライブラリー。\n",
         "\n",
         "公式サイトは `reactjs.org` \n",
-        "\n"
+        "\n",
+        "次のコードセルはコメントアウトしてあるが、アンコメントすると動かないのでこうしている。\n",
+        "\n",
+        "たぶん、`<script src=\"\"></script>` が機能していない。"
       ]
     },
     {
@@ -70,24 +68,24 @@
         "outputId": "1d0270bf-60b0-4f18-d943-5c2dd161bd14"
       },
       "source": [
-        "%%html\n",
+        "# %%html\n",
         "\n",
-        "<head>\n",
-        "<script src=\"https://unpkg.com/react@16/umd/react.development.js\"></script>\n",
-        "<script src=\"https://unpkg.com/react-dom@16/umd/react-dom.development.js\"></script>\n",
-        "<script src=\"https://unpkg.com/@babel/standalone/babel.min.js\"></script>\n",
-        "</head>\n",
-        "<body>\n",
-        "    <div id=\"root\"></div>\n",
-        "<script type=\"text/babel\">\n",
-        "      ReactDOM.render(\n",
-        "        <h1>Hello, world!</h1>,\n",
-        "        document.getElementById('root')\n",
-        "      );\n",
-        "</script>\n",
-        "</body>"
+        "# <head>\n",
+        "# <script src=\"https://unpkg.com/react@16/umd/react.development.js\"></script>\n",
+        "# <script src=\"https://unpkg.com/react-dom@16/umd/react-dom.development.js\"></script>\n",
+        "# <script src=\"https://unpkg.com/@babel/standalone/babel.min.js\"></script>\n",
+        "# </head>\n",
+        "# <body>\n",
+        "#     <div id=\"root\"></div>\n",
+        "# <script type=\"text/babel\">\n",
+        "#       ReactDOM.render(\n",
+        "#         <h1>Hello, world!</h1>,\n",
+        "#         document.getElementById('root')\n",
+        "#       );\n",
+        "# </script>\n",
+        "# </body>"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -117,6 +115,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8r2h_od1bzOS",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
