Colaboratory を使用して作成しました

--- a/learnjs.ipynb
+++ b/learnjs.ipynb
@@ -6,7 +6,7 @@
       "name": "learnjs.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNVLch/XSrCmKs/mNs4MIpf",
+      "authorship_tag": "ABX9TyPTuLnljmpU8WHtfY1zynzw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2645,18 +2645,30 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 46
+          "height": 107
         },
-        "outputId": "46c7754c-e158-4bec-a038-4d32eed85aca"
+        "outputId": "0f6155ea-8330-44ba-cdff-b62961b8755a"
       },
       "source": [
-        "%%html\n",
+        "# %%html\n",
         "\n",
-        "<body>\n",
-        "<p>this is p</p>\n",
-        "</body>"
+        "# <body>\n",
+        "# <p class=\"this\">this is p</p>\n",
+        "# <script type=\"text/javascript\">\n",
+        "# const list = document.querySelector(\".this\");\n",
+        "# list.innerHTML = '';\n",
+        "# document.body.style = \"white-space: pre;\";\n",
+        "\n",
+        "# function print (str) {\n",
+        "#     let item = document.createElement('div');\n",
+        "#     item.textContent = str;\n",
+        "#     list.appendChild(item);\n",
+        "# };\n",
+        "# </script>\n",
+        "# <script \n",
+        "# </body>"
       ],
-      "execution_count": 36,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2664,7 +2676,19 @@
             "text/html": [
               "\n",
               "<body>\n",
-              "<p>this is p</p>\n",
+              "<p class=\"this\">this is p</p>\n",
+              "<script type=\"text/javascript\">\n",
+              "const list = document.querySelector(\".this\");\n",
+              "list.innerHTML = '';\n",
+              "document.body.style = \"white-space: pre;\";\n",
+              "\n",
+              "function print (str) {\n",
+              "    let item = document.createElement('div');\n",
+              "    item.textContent = str;\n",
+              "    list.appendChild(item);\n",
+              "};\n",
+              "</script>\n",
+              "<script \n",
               "</body>"
             ],
             "text/plain": [
