Colaboratory を使用して作成しました

--- a/learnreact.ipynb
+++ b/learnreact.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "learnreact.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPEscwqsaYcgOabujV+fwB5",
+      "authorship_tag": "ABX9TyM7s6SkUg5FDXhacHSh31ah",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,6 +121,23 @@
       "cell_type": "markdown",
       "metadata": {
         "id": "8r2h_od1bzOS",
+        "colab_type": "text"
+      },
+      "source": [
+        "React Developer Tools という google chrome の拡張機能\n",
+        "入れたら、拡張機能の管理で、ファイルの URL へのアクセスを許可する。  \n",
+        "html に、reactjs.org から 3行コピーして、ヘッダーに入れる。\n",
+        "```\n",
+        "docs -> installation -> try react -> download this html file\n",
+        "```\n",
+        "\n",
+        "`babel` を使っている。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d5CgAq3xbTLF",
         "colab_type": "text"
       },
       "source": [
