Colaboratory を使用して作成しました

--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -6,7 +6,7 @@
       "name": "learncss.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOcgedlONWB6mV4NBnpVoF2",
+      "authorship_tag": "ABX9TyMD8uFl4ERnfdCuvtcli7JG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -166,7 +166,7 @@
         "</header>\n",
         "</body>"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -257,7 +257,7 @@
         "</header>\n",
         "</body>"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -311,6 +311,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "29jx73DEbojp",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
