Colaboratory を使用して作成しました

--- a/affinitydesigner.ipynb
+++ b/affinitydesigner.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "affinitydesigner.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMU9ClzDM/djDQN9/L3YAFv",
+      "authorship_tag": "ABX9TyPiZ4kVwxwI5rLxwHDFI55E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,7 @@
         "\n",
         "1. https://inkscape.org/learn/tutorials/\n",
         "1. https://affinity.serif.com/ja-jp/tutorials/designer/desktop/\n",
+        "1. http://tavmjong.free.fr/INKSCAPE/MANUAL/html/AShortExample.html\n",
         "\n",
         "affinity designer\n",
         "を使っているが、どうもうまく行っていない。なぜならば inkscape のような tutorial がないからか、と思いついた。\n",
@@ -85,6 +86,49 @@
         "inkscape ではごく初期から、国旗を描いてみるなど、実例を入れることによって tutorial を勧めているが、affnity designer にそのようなのはあるのか。\n",
         "\n",
         "私の今の気分としては機能など affinity designer の方がはるかに上なのに、もし ipad で inkscape がちゃんと動くなら inkscape を使いたい。まあそれは別の話なのでいまはここ affinity designer でがんばろう。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U5NJLVLTGYHw",
+        "colab_type": "text"
+      },
+      "source": [
+        "# スウェーデンの旗\n",
+        "\n",
+        "今気づいたのだが、スウェーデンの旗の描き方は inkscape のオフィシャルな tutorial の中にはないのだね。まあいいか。\n",
+        "\n",
+        "手順:  \n",
+        "* inkscape を起動する。\n",
+        "* 描画サイズをセットする。\n",
+        "* グリッド・ガイドに合わせる、をセットする。\n",
+        "* 背景を描く。\n",
+        "* 十字架を描く。\n",
+        "* 色をセットする。\n",
+        "* 保存と書き出し。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fFt-OdZNHcbe",
+        "colab_type": "text"
+      },
+      "source": [
+        "# ロボットを描く\n",
+        "というアイデア"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VZ-r-9LDHiEM",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
