Colaboratory を使用して作成しました

--- a/affinitydesigner.ipynb
+++ b/affinitydesigner.ipynb
@@ -6,7 +6,7 @@
       "name": "affinitydesigner.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOe7zAFsBQ81hKnezFGu335",
+      "authorship_tag": "ABX9TyPfKj9J9MCQsaa8e4vVmBgl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,52 +184,33 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "cx6XEF0d0uXM",
+        "colab_type": "text"
+      },
+      "source": [
+        "# jhlkjhlkj\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TeiTmlS70oke",
+        "colab_type": "text"
+      },
+      "source": [
+        "# うなじ\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "MTBXCwlVxtE3",
         "colab_type": "text"
       },
       "source": [
+        "# いまここ\n",
         "\n",
-        "\n",
-        "ドキュメントおよび画像を開く\n",
-        "\n",
-        "次のいずれかを行います。\n",
-        "[ファイル]メニューから、[開く]をクリックします。\n",
-        "空のビューで任意の場所をダブルクリックします(他のドキュメントを開いていない場合に、標準モードでのみ利用できます)。\n",
-        "必要なファイルを選択し、[開く]をクリックします。\n",
-        "最近使用したドキュメントを開くには:\n",
-        "[ファイル]メニューから、[最近使用したファイルを開く]を選択して、サブメニューからファイルを選択します。\n",
-        "画像を新規ドキュメントとして開くには(Finderを使用):\n",
-        "Finderを開き、ファイルをワークスペースのページ外の領域にドラッグします。\n",
-        "上記の方法でラスター画像を開くと、「背景」という名前の、デフォルトでロックされた1つのレイヤーを持つ新規ドキュメントが作成されます。ドキュメントは画像の名前をファイル名として採用します。\n",
-        "\n",
-        "開くときに、ファイルの色空間がデフォルトで保存されますが、[Affinity Designer]>[環境設定](カラーオプション)で、[開いているファイルを変換する]オプションを使用してデフォルトの作業色空間に変換することができます。ドキュメントの現在のカラープロファイルは、ワークスペースの左上に表示されます。\n",
-        "\n",
-        "レイヤーに画像を追加するには(Finderを使用):\n",
-        "[レイヤー]パネルで、「ターゲット」レイヤーを選択します\n",
-        "画像をFinderからページにドラッグします。画像が選択したレイヤーに追加されます。\n",
-        "前述の画像の追加で説明したように、既存のドキュメントをレイヤーに埋め込むことができます。\n",
-        "\n",
-        "Adobe PDFファイルを開くには:\n",
-        "[ファイル]メニューから、[開く]をクリックします。\n",
-        "PDFオプションダイアログで、次の項目を選択できます。\n",
-        "特定のページまたはすべてのページのインポート\n",
-        "PDFコンテンツの解像度の設定\n",
-        "PDFコンテンツに使用する、ドキュメントの色空間。[推定]オプションは、PDFファイルの色空間を識別して、その色空間を使用します。\n",
-        "正確なデザインの再現を犠牲にしてテキストをより編集可能な状態に維持するかどうか\n",
-        "テキストを流し込めるように、別々のテキストラインを1つのテキストフレームとして扱えるようにするかどうか\n",
-        "不足フォントを類似の代替フォントで代用\n",
-        "複数ページのPDFファイルの場合、各ページは独自のレイヤーに配置されます。非表示ページのレイヤーコンテンツを表示するには、そのレイヤーをオンにします。\n",
-        "\n",
-        "環境設定\n",
-        "関連する動作は、次のアプリの環境設定から調整できます。\n",
-        "\n",
-        "[一般]>[起動時にドキュメントを再度開く]\n",
-        "関連項目:\n",
-        "新規ドキュメントを作成する\n",
-        "ドキュメントテンプレート\n",
-        "カラーマネジメント\n",
-        "サポートされているファイル形式\n",
-        "レイヤを配置/管理する"
+        "ｋｊｌｊｈｋ"
       ]
     }
   ]
