--- a/affinitydesigner.ipynb
+++ b/affinitydesigner.ipynb
@@ -6,7 +6,7 @@
       "name": "affinitydesigner.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMwasTTn/4nK+IV+xPJrJEP",
+      "authorship_tag": "ABX9TyNAqbYkP/dj68KmbQ8kwnnz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -188,8 +188,6 @@
         "colab_type": "text"
       },
       "source": [
-        "# いまここ\n",
-        "\n",
         "# ライン、カーブ、シェイプについて\n",
         "\n",
         "ベクトルシェイプやカーブを描画する際には、ペン、鉛筆、ベクトルブラシ、シェイプツールを使用する。カーブやシェイプの編集は、ノードツールを使用して行う。\n",
@@ -202,27 +200,106 @@
         "\n",
         "\n",
         "### シェイプ\n",
-        "シェイプとは、閉じたパスであり、始点や終点の区別ない。シェイプは複数のノードとセグメントで形成される。\n",
+        "シェイプとは、閉じたパスであり、始点や終点の区別ない。シェイプは複数のノードとセグメントで形成される。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nF9-Nd5KklLg",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XPy6c443k8Jz",
+        "colab_type": "text"
+      },
+      "source": [
+        "# ペンツール 鉛筆ツール カーブおよびシェイプを描画する\n",
+        "\n",
+        "ベクトルライン、カーブおよびシェイプは、ペンツールまたは鉛筆ツールを使用して簡単に作成できます。ペンツールには、パスの描画方法を変更するモードがいくつかあります。\n",
+        "\n",
+        "ペンツール ペンツールで正確なカーブを描画するには:\n",
+        "[ペンツール]を選択します。\n",
+        "コンテキストツールバーで、次のモードのいずれかをクリックします。\n",
+        "ペンモード [ペンモード]—ページ上をクリックしてドラッグすることで、ノードが繰り返し作成されます。ノードごとに表示されるカーブ外のハンドルの位置を変更することで、各ノードの位置決めの際に次のセグメントの形状が決まります。\n",
+        "スマートモード [スマートモード]—ページ上を繰り返しクリックして各ノードの位置を決定します。コントロールハンドルを調整しなくても、最適にフィットするカーブが作成されます。\n",
+        "ポリゴンモード [ポリゴンモード]—ページ上を繰り返しクリックして各ノードの位置を決定します。直線セグメントで構成されたシャープなノードによるラインが作成されます。\n",
+        "線モード [線モード]—ページ上をクリックしてドラッグすることで、単一セグメントの単純な直線が作成されます。\n",
+        "曲線を閉じずに作成を完了するには、を押します。曲線を閉じるには、開始ノードをクリックします。\n",
+        "[モード]セクションにある別の3つのモードは、上記の4つのモードのいずれか1つと組み合わせて使用できます。\n",
+        "\n",
+        "選択を保持 [新規カーブの作成時に選択を保持]—有効になっている場合、描画中にノードやジオメトリを簡単にスナップできるように、それまでに描画したカーブが選択されたままになります。\n",
+        "カーブに追加モード [選択されたカーブオブジェクトに新規カーブを追加]—このモードが有効になっている場合、最初のカーブと同じレイヤー上に追加のカーブが作成されます。これにより、多数のカーブレイヤーを管理しやすくなります。たとえば、文字'a'を構成する2つのカーブを単一の'カーブオブジェクト'にすることができます。[レイヤー]>[ジオメトリ]で、各カーブを個別のレイヤーに分離するには[カーブを分離]を、選択されているカーブを1つのレイヤーにまとめるには[カーブを結合]を選択します。\n",
+        "ラバーバンドモード [ラバーバンドモード]—有効になっている場合、新しいノードの配置前に描画される次のセグメントのプレビューが表示されます。直線セグメントのプレビューでは を同時に押して使用します。\n",
+        "このツールを使用すると、次のクリックの結果を示す数種類のカーソルが表示される場合があります。\n",
+        "\n",
+        "カーソルタイプ\t説明\n",
+        "\tアスタリスク—新しいカーブを作成します\n",
+        "\tプラス—新しいノードとカーブセグメントを作成します\n",
+        "\tスロープ—シャープなコーナーに変換するか、ドラッグしてノードを再作成します\n",
+        "\t円—閉じたシェイプを作成します\n",
+        "\t円付きアスタリスク—既存のカーブのノードから新しいカーブを作成します。\n",
+        "\t円付きプラス—既存のカーブのノードとオーバーラップする新しいノードを作成します。\n",
+        "ノードツール 既存のカーブの作成を続行するには:\n",
+        " を押してカーブを編集するか、ノードツールでカーブを選択します。\n",
+        "作成を続行するパスの最終ノード上にカーソルを置きます。\n",
+        "一度だけクリックすると、そのノードが選択されます。\n",
+        " を解除(またはペンツールを選択)し、クリック/ドラッグして必要に応じて新しいノードを配置します。\n",
+        "同じカーブ上の既存ノードをクリックまたはドラッグすると、カーブの作成が再開され、オーバーラップする共存ノードが生成されます。代わりに、を押しながらノードをドラッグすると、既存のノードが再描画され、カーブは終了します。\n",
+        "\n",
+        "カーブを閉じる カーブを閉じてカスタムシェイプを作成するには:\n",
+        "次のいずれかを行います。\n",
+        "\n",
+        "[ペン]または[ノードツール]でカーブを選択した状態で、コンテキストツールバーの[カーブを閉じる]をクリックします。\n",
+        "ペンツールによるカーブの作成時に開始ノードをクリックすると、カーブが最終ノードに結合されてシェイプが作成されます。\n",
+        " ストロークに矢印を追加するには:\n",
+        "ラインまたはカーブを選択し、[ストローク]パネルの[開始]/[終了]ポップアップダイアログから矢印のスタイルを選択します。\n",
+        "開始スタイルと終了スタイルの位置として[矢印を線の内側に配置します]か[矢印を線の端に配置します]を選択します。\n",
+        "矢印のスタイルを選択し、[開始]スタイルと[終了]スタイルに比率を入力して、選択した矢印とストローク幅との相対的な大きさを調整します。\n",
+        "ストロークに追加されるサンプルの矢印。\n",
+        "点線/破線スタイルについて\n",
+        "[ストローク]パネルでは、ストロークを点線または破線に変更できます。\n",
+        "\n",
+        "パネルの数値グリッドは、2つの数値ペアを使用して線のパターンを設定するものです。\n",
+        "\n",
+        "最初の2つの値は、先頭の点線または破線とそれに続く空白のサイズを設定するものです。\n",
+        "第3と第4の値を設定すると、さらに複雑なパターンを導入できます。これらの値は、破線と空白に対して1つおきに別のサイズを設定するものです。\n",
+        "すべての値が現在のライン幅に基づきます。たとえば、2という値はライン幅の2倍を意味します。\n",
         "\n",
         "\n",
         "\n",
-        "シェイプツールを使用して幾何学的シェイプを簡単に作成することもできる。これらのシェイプには、円、長方形、ポリゴンなどのシェイプの迅速な作成を可能にする固有のプロパティがある。こうしたプロパティなしには、円、長方形、ポリゴンといったシェイプを描画することは困難だ。\n",
-        "\n",
-        "自己交差シェイプの塗りつぶし\n",
-        "自己交差ラインを使用して作成されたシェイプは、[交互]または[全域]という2種類の方法で塗りつぶすことができる。\n",
-        "\n",
-        "[交互]モードでは、任意の方向にそのポイントから無限に光線を描画することにより、形状のセグメントを塗りつぶすかどうかを決定し、光線が通過する特定の形状内のセグメントの数をカウントする。この数値が奇数の場合、セグメントは塗りつぶし領域の内側にある。偶数の場合、セグメントは塗りつぶし領域の外側にある。\n",
-        "\n",
-        "[ワインディング]モードでは、任意の方向にそのポイントから無限に光線を描画し、シェイプのセグメントが光線を横切るインスタンスの数をカウントすることにより、シェイプのセグメントを塗りつぶすかどうかを決定する。ゼロから開始して、セグメントが左から右に光線を横切るたびに1つのカウントが加算され、光線の視点からパスセグメントが右から左に光線を横切るたびに1つのカウントが減算される。交差の数がカウントされた後、結果がゼロの場合、ポイントは塗りつぶしパスの外側にあると見なされる。それ以外の場合は、パスの内側にある。\n",
+        "ラウンド線端が有効で、[破線]の設定がそれぞれ0,1,0,0および0,2,0,0の点線スタイル。\n",
+        "点線を作成するには、0,1,0,0、0,2,0,0、0,3,0,0などの設定を使用します。\n",
         "\n",
         "\n",
         "\n",
-        "交互モードと全域モードの塗りつぶし\n",
-        "塗りつぶしモードを設定するには:\n",
-        "オブジェクトが選択されている状態で、[レイヤー]メニューの[塗りつぶしモード]サブメニューからオプションを選択する。\n",
+        "バット線端が有効で、[破線]設定がそれぞれ1,2,0,0および1,2,4,2の破線スタイル。\n",
+        "[フェーズ]の値によって、破線スタイルを前に「シフト」し、スタイルのシーケンス内の別の点からデザインが始まるようにすることができます。これは、閉じたシェイプに対する破線の表示方法に影響を与える場合があります(下記を参照)。\n",
+        "\n",
+        "\n",
+        "\n",
+        "バット線端が有効で[フェーズ]設定がそれぞれ0および4の破線スタイル1,2,4,2。\n",
+        "モディファイアーキー\n",
+        "ペンツールの使用時には、次のモディファイアーキーを使用して描画時のワークフローを短縮できます。\n",
+        "\n",
+        "は、[ノード]ツールを一時的に有効にします。\n",
+        "は、ペンモードでのコントロールハンドルの回転に制約を加えて45°単位にします。スマートモードでは、代わりにノードの配置に制約が加えられます。\n",
+        "は、強制的にノードを尖点モードにします。\n",
+        "を押しながらクリックしてドラッグすると、コントロールハンドルの位置に影響を与えずに最後に描画したノードの位置を変更できます。この場合はノードの内外の曲率が維持されます。\n",
         "関連項目:\n",
-        "ベクトルラインを編集する\n",
-        "シェイプを描画して編集する"
+        "シェイプを描画して編集する\n",
+        "ベクトルラインおよびシェイプを編集する\n",
+        "ペンツール\n",
+        "鉛筆ツール\n",
+        "ノードツール\n",
+        "筆圧感知\n",
+        "ストロークパネル"
       ]
     }
   ]
