Colaboratory を使用して作成しました

--- a/affinitydesigner.ipynb
+++ b/affinitydesigner.ipynb
@@ -6,7 +6,7 @@
       "name": "affinitydesigner.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNE24uMa+zJjGJ08CtQZ6+o",
+      "authorship_tag": "ABX9TyP9vAPAt75L1/yUn4GwyaYw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -157,7 +157,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Q and A\n",
+        "# 雑 Miscellaneous\n",
         "\n",
         "* グリッドを表示させる。 => 左上のドキュメントアイコン => グリッド => Show Grid\n",
         "* グリッドの幅を変える。   => 左上のドキュメントアイコン => グリッド => Spacing => 数値入力\n",
@@ -185,17 +185,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nF9-Nd5KklLg",
-        "colab_type": "text"
-      },
-      "source": [
-        "# アンドゥー・リドゥー\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "XPy6c443k8Jz",
         "colab_type": "text"
       },
@@ -203,6 +192,37 @@
         "# 課題 フラミンゴを描く。\n",
         "\n",
         "cf. ヘルプ => カーブ、およびシェイプを描画する。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yTw6BLzBIc5L",
+        "colab_type": "text"
+      },
+      "source": [
+        "# ジェスチャー\n",
+        "\n",
+        "* 画面の移動 => 2フィンガードラッグ\n",
+        "* 拡大縮小 => ピンチアウト、ピンチイン。または、ナビゲーター・スタジオアイコン (コ* ンパス) を上下する。こする。\n",
+        "* ズーム・トゥ・フィット => ナビゲーター・アイコンを開いて、画像をダブルクリック。\n",
+        "* カンバスの回転 => 設定 => ツール => 回転を許可 => ピンチアンドローテートで回転。* 水平に戻すのにはナビゲーター・スタジオで角度を0にする。\n",
+        "* アンドゥー・リドゥー => 2フィンガータップ、3フィンガータップ\n",
+        "* ストロークの太さを変える => ストローク・スタジオを上下にこする。\n",
+        "* テキストの大きさを変える => テキスト・スタジオを上下にこする。\n",
+        "* クイック・コンテキストメニューを出す => 長押し\n",
+        "* 図形を動かしたり、変形したり、描いたりするとき 1フィンガーモディファイアー、2フィンガーモディファイアーが効く。角度の制約、縦横比の維持、センター描画、など。\n",
+        "* レイヤーの選択は、レイヤースタジオでレイヤーをスワイプする。選択解除もスワイプ。日本指でタップすると範囲選択になる。\n",
+        "* 画像を移動ツールでタップすると、レイヤーが選択される。レイヤーでピンチアウト、ピンチインでグループ化、アングループ化ができる。\n",
+        "* 移動ツールでは2フィンガーモディファイアーで複製ができる。\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     }
   ]
