Colaboratory を使用して作成しました

--- a/affinitydesigner.ipynb
+++ b/affinitydesigner.ipynb
@@ -6,7 +6,7 @@
       "name": "affinitydesigner.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP9vAPAt75L1/yUn4GwyaYw",
+      "authorship_tag": "ABX9TyPxrSILQLLeg1JQ2KJehTSo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -215,6 +215,11 @@
         "* レイヤーの選択は、レイヤースタジオでレイヤーをスワイプする。選択解除もスワイプ。日本指でタップすると範囲選択になる。\n",
         "* 画像を移動ツールでタップすると、レイヤーが選択される。レイヤーでピンチアウト、ピンチインでグループ化、アングループ化ができる。\n",
         "* 移動ツールでは2フィンガーモディファイアーで複製ができる。\n",
+        "* カラースタジオはアイコンをこするとインテンシティを変化させる。フィルとストロークは左右にスワイプでスワップできる。上下にスワイプで色なし (ノーフィル)。 \n",
+        "* フィルツールのグラデーションでは1フィンガーモディファイアーで角度を制約できる。\n",
+        "* ペンツールは点で直線、ドラッグで曲線だが、1フィンガーモディファイアーで曲線を cusp にできる。2フィンガーモディファイアーで曲線の曲がり角度を制約する。\n",
+        "* ペンツールのままノードに触れるとコントロールハンドルの調節になるが、2フィンガーホールドを加えると、ノードの移動になる。ノードを加えると同時に、3フィンガーホールドすると、ノードを作りながら場所を変えることができる。\n",
+        "\n",
         "\n",
         "\n",
         "\n",
