Colaboratory を使用して作成しました

--- a/affinitydesigner.ipynb
+++ b/affinitydesigner.ipynb
@@ -6,7 +6,7 @@
       "name": "affinitydesigner.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPvfFWeJJUfhKToNkZn9eiI",
+      "authorship_tag": "ABX9TyM/m+P8lsEQZPixmtSdQ/5I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -305,7 +305,36 @@
       "source": [
         "ペイントブラシツール\n",
         "\n",
-        "* ペイントブラシツールはピクセルペルソナで使う。"
+        "* ペイントブラシツールはピクセルペルソナで使う。ブラシと色を選んで描き始める。\n",
+        "* 最近使ったブラシというメニューもある。\n",
+        "* ベクター画像のレイヤー内でペイントブラシを使うとはみ出さずに塗れる。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PZpva9tzm9pp",
+        "colab_type": "text"
+      },
+      "source": [
+        "画像の配置\n",
+        "\n",
+        "* 左上のドキュメントメニューにある画像を配置する、というメニューを選ぶと、画像 (写真)を配置できる。\n",
+        "* 左下の磁石アイコンでスナップをオンにする。\n",
+        "* 矩形など図形のレイヤー内に画像レイヤーを入れると図形の形にクリップされる。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XwFF8Gf_3t-L",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 位置合わせと均等配置\n",
+        "\n",
+        "* トランスフォームスタジオをタップ。一番下にアラインメントオプションがある。\n",
+        "* マーキー選択は移動ツールでやるのか。できた。"
       ]
     },
     {
