--- a/learnreact.ipynb
+++ b/learnreact.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "learnreact.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPq72czC+fjHKxQSK0mBNl9",
+      "authorship_tag": "ABX9TyNsW42AzhrSDaX73XQbiQ7E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,9 +51,7 @@
         "\n",
         "公式サイトは `reactjs.org` \n",
         "\n",
-        "次のコードセルはコメントアウトしてあるが、アンコメントすると動かないのでこうしている。\n",
-        "\n",
-        "たぶん、`<script src=\"\"></script>` が機能していない。"
+        "html で次のように呼び出して使う。 Colab のコードセルではなく、別途ファイルにして、ブラウザーで読み込んで使う。\n"
       ]
     },
     {
@@ -68,22 +66,20 @@
         "outputId": "1d0270bf-60b0-4f18-d943-5c2dd161bd14"
       },
       "source": [
-        "# %%html\n",
-        "\n",
-        "# <head>\n",
-        "# <script src=\"https://unpkg.com/react@16/umd/react.development.js\"></script>\n",
-        "# <script src=\"https://unpkg.com/react-dom@16/umd/react-dom.development.js\"></script>\n",
-        "# <script src=\"https://unpkg.com/@babel/standalone/babel.min.js\"></script>\n",
-        "# </head>\n",
-        "# <body>\n",
-        "#     <div id=\"root\"></div>\n",
-        "# <script type=\"text/babel\">\n",
-        "#       ReactDOM.render(\n",
-        "#         <h1>Hello, world!</h1>,\n",
-        "#         document.getElementById('root')\n",
-        "#       );\n",
-        "# </script>\n",
-        "# </body>"
+        "<head>\n",
+        "<script src=\"https://unpkg.com/react@16/umd/react.development.js\"></script>\n",
+        "<script src=\"https://unpkg.com/react-dom@16/umd/react-dom.development.js\"></script>\n",
+        "<script src=\"https://unpkg.com/@babel/standalone/babel.min.js\"></script>\n",
+        "</head>\n",
+        "<body>\n",
+        "    <div id=\"root\"></div>\n",
+        "<script type=\"text/babel\">\n",
+        "      ReactDOM.render(\n",
+        "        <h1>Hello, world!</h1>,\n",
+        "        document.getElementById('root')\n",
+        "      );\n",
+        "</script>\n",
+        "</body>"
       ],
       "execution_count": null,
       "outputs": [
@@ -126,12 +122,11 @@
       "source": [
         "React Developer Tools という google chrome の拡張機能\n",
         "入れたら、拡張機能の管理で、ファイルの URL へのアクセスを許可する。  \n",
-        "html に、reactjs.org から 3行コピーして、ヘッダーに入れる。\n",
+        "html に、reactjs.org から 3行コピーして、ヘッダーに入れている。\n",
+        "\n",
         "```\n",
         "docs -> installation -> try react -> download this html file\n",
         "```\n",
-        "\n",
-        "`babel` を使っている。\n",
         "\n",
         "\n",
         "上記のセルでは script の中に直接 ReactDOM.render(); としているが、ドットインストールではこれをさらに javascript のアロー関数式で囲んでいる。\n",
@@ -147,12 +142,12 @@
         "colab": {}
       },
       "source": [
-        "# (() => {\n",
-        "#   ReactDOM.render(\n",
-        "#     <p>Hello!</p>,\n",
-        "#     document.getElementById('root')\n",
-        "#   );\n",
-        "# })();"
+        "(() => {\n",
+        "  ReactDOM.render(\n",
+        "    <p>Hello!</p>,\n",
+        "    document.getElementById('root')\n",
+        "  );\n",
+        "})();"
       ],
       "execution_count": null,
       "outputs": []
