Colaboratory を使用して作成しました

--- a/affinitydesigner.ipynb
+++ b/affinitydesigner.ipynb
@@ -6,7 +6,7 @@
       "name": "affinitydesigner.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNEzW7SAeiV/3uVQx+TmjVg",
+      "authorship_tag": "ABX9TyPGK38xupZvoJrASmENroqh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,63 +139,6 @@
         "ドキュメントビューに入ると右下にヘルプ `?` アイコンがあって、これを押している間、画面上のツールなどのアイコンの名称が出る。\n",
         "\n",
         "リストアップしてみよう。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "BCpjGly856SC",
-        "colab_type": "text"
-      },
-      "source": [
-        "# 画面とアイコン\n",
-        "\n",
-        "上部\n",
-        "* Home (左矢印) ホーム\n",
-        "* Document ドキュメント\n",
-        "* Edit 編集\n",
-        "* Designer デザイナーペルソナ\n",
-        "* Pixel ピクセルペルソナ\n",
-        "* Export 書き出しペルソナ\n",
-        "\n",
-        "左 ツールバー\n",
-        "* Move 移動ツール\n",
-        "* Node ノードツール\n",
-        "* Point Transform ポイント変換ツール\n",
-        "* Corner コーナーツール\n",
-        "* Pencil 鉛筆ツール\n",
-        "* Vector Brush ベクトルブラシツール\n",
-        "* Pen ペンツール\n",
-        "* Fill 塗りつぶしツール\n",
-        "* Transparency 透明性ツール\n",
-        "* Vector Crop ベクトル切り抜きツール\n",
-        "* Rectangle 矩形ツール\n",
-        "* Artistic Text アーティスティックテキストツール\n",
-        "* Color Picker カラーピッカーツール\n",
-        "\n",
-        "選択関係\n",
-        "* Deselect 選択解除\n",
-        "* Snapping スナップ\n",
-        "* Delete 削除\n",
-        "\n",
-        "右上\n",
-        "* Hide UI メニューを隠す\n",
-        "\n",
-        "右 スタジオパネル\n",
-        "* Color カラースタジオ\n",
-        "* Stroke ストロークスタジオ\n",
-        "* Brushes ブラシスタジオ\n",
-        "* Layers レイヤースタジオ\n",
-        "* Appearance 外観スタジオ\n",
-        "* Assets アセットスタジオ\n",
-        "* Stock ストック写真スタジオ\n",
-        "* Symbols シンボルスタジオ\n",
-        "* Layer レイヤーエフェクトスタジオ\n",
-        "* Adjustments 調整スタジオ\n",
-        "* Text テキストスタジオ\n",
-        "* Transform 変換スタジオ\n",
-        "* Navigator ナビゲータースタジオ\n",
-        "* History 履歴スタジオ\n"
       ]
     },
     {
@@ -459,6 +402,78 @@
         "# オープンとインポート\n",
         "\n",
         "* 紙のスケッチを写真に撮って、ウェルカム画面から新規作成 => 写真からインポートを選ぶとインポートされて便利。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EnCTYzmqF0Lc",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 新規作成と保存\n",
+        "\n",
+        "* 描いた絵は左上の戻る矢印でウエルカムスクリーンに戻ると自動的に保存される。\n",
+        "* 明示的に場所や名前をつけて保存するには、左上のドキュメントメニューを使う。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LkD-LdN1KSR6",
+        "colab_type": "text"
+      },
+      "source": [
+        "# UIの概要 \n",
+        "\n",
+        "上部\n",
+        "* Home (左矢印) ホーム\n",
+        "* Document ドキュメント\n",
+        "* Edit 編集\n",
+        "* Designer デザイナーペルソナ\n",
+        "* Pixel ピクセルペルソナ\n",
+        "* Export 書き出しペルソナ\n",
+        "\n",
+        "左 ツールバー\n",
+        "* Move 移動ツール\n",
+        "* Node ノードツール\n",
+        "* Point Transform ポイント変換ツール\n",
+        "* Corner コーナーツール\n",
+        "* Pencil 鉛筆ツール\n",
+        "* Vector Brush ベクトルブラシツール\n",
+        "* Pen ペンツール\n",
+        "* Fill 塗りつぶしツール\n",
+        "* Transparency 透明性ツール\n",
+        "* Vector Crop ベクトル切り抜きツール\n",
+        "* Rectangle 矩形ツール\n",
+        "* Artistic Text アーティスティックテキストツール\n",
+        "* Color Picker カラーピッカーツール\n",
+        "\n",
+        "選択関係 (左下)\n",
+        "* Deselect 選択解除\n",
+        "* Snapping スナップ\n",
+        "* Delete 削除\n",
+        "\n",
+        "右上\n",
+        "* Hide UI メニューを隠す\n",
+        "\n",
+        "右 スタジオパネル\n",
+        "* Color カラースタジオ\n",
+        "* Stroke ストロークスタジオ\n",
+        "* Brushes ブラシスタジオ\n",
+        "* Layers レイヤースタジオ\n",
+        "* Appearance 外観スタジオ\n",
+        "* Assets アセットスタジオ\n",
+        "* Stock ストック写真スタジオ\n",
+        "* Symbols シンボルスタジオ\n",
+        "* Layer レイヤーエフェクトスタジオ\n",
+        "* Adjustments 調整スタジオ\n",
+        "* Text テキストスタジオ\n",
+        "* Transform 変換スタジオ\n",
+        "* Navigator ナビゲータースタジオ\n",
+        "* History 履歴スタジオ\n",
+        "\n",
+        "コンテキストメニュー (下)\n"
       ]
     },
     {
