Colaboratory を使用して作成しました

--- a/affinitydesigner.ipynb
+++ b/affinitydesigner.ipynb
@@ -6,7 +6,7 @@
       "name": "affinitydesigner.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPGK38xupZvoJrASmENroqh",
+      "authorship_tag": "ABX9TyOBc6D6/PyNRl507j9Wxlcf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -474,6 +474,18 @@
         "* History 履歴スタジオ\n",
         "\n",
         "コンテキストメニュー (下)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rkE_D635G7ni",
+        "colab_type": "text"
+      },
+      "source": [
+        "# アセットスタジオ\n",
+        "\n",
+        "* デザイン要素の再利用に使う。"
       ]
     },
     {
