--- a/haskell01.ipynb
+++ b/haskell01.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPRfjyxUd2KGWwiLnhlWCaz",
+      "authorship_tag": "ABX9TyMasww3VYb/1nfP+AsiySlD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,22 @@
         "> sudo apt-get install haskell-platform\n",
         "\n",
         "対話環境は ghci とタイプして立ち上げる。 すると、プロンプトは `Prelude>`。\n",
-        "\n"
+        "\n",
+        "> stack\n",
+        "\n",
+        "とタイプすると、次のようになる。 \n",
+        "\n",
+        "> コマンド 'stack' が見つかりません。次の方法でインストールできます:  \n",
+        ">   \n",
+        "> sudo apt install haskell-stack  \n",
+        "\n",
+        "cabal と ghc のバージョンは。\n",
+        "\n",
+        "> cabal-install version 2.4.0.0  \n",
+        ">   \n",
+        "> The Glorious Glasgow Haskell Compilation System, version 8.6.5  \n",
+        "\n",
+        "自分の今の理解: haskell-platform と haskell-stack をインストールしても、stackをインストールして、stack から haskell をインストールしても同じ。 現在は、haskell.org は前者を推奨。なぜならわかりやすいから。少なくとも Linux (Ubuntu) では。"
       ]
     },
     {
@@ -82,6 +97,8 @@
         "outputId": "dd814f34-6b50-4f90-e49c-876daa265379"
       },
       "source": [
+        "# Python \n",
+        "\n",
         "\"Hello, World\""
       ],
       "execution_count": null,
