Colaboratory を使用して作成しました

--- a/kaggle07import.ipynb
+++ b/kaggle07import.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle07import.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP3wNJX8zlqQzwApIjnZ2Oo",
+      "authorship_tag": "ABX9TyPDK7aIx2/eh426KX8ygktA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +34,8 @@
       "source": [
         "# メモ\n",
         "\n",
-        "1. kaggleのPython tutorialをベスにColabのノートブックを作成している。\n",
-        "1. Colabで開いて読まれることを想定。\n",
+        "1. kaggle の Python tutorial をベスに Colab ノートブックを作成している。\n",
+        "1. Colab で開いて読まれることを想定。\n",
         "1. 元ファイル ( https://www.kaggle.com/colinmorris/working-with-external-libraries )\n"
       ]
     },
@@ -48,7 +48,7 @@
       "source": [
         "# はじめに\n",
         "\n",
-        "この章では、インポート`import`、ライブラリー`library`とそのオブジェクト`object`、演算子オーバーロード`operator overload`について学ぶ。"
+        "この章では、インポート import、ライブラリー library とそのオブジェクト object、演算子オーバーロード operator overload について学ぶ。"
       ]
     },
     {
@@ -60,13 +60,15 @@
       "source": [
         "# Imports\n",
         "\n",
-        "これまで学んできた型`type`と関数`function`は言語に始めから組み込まれているものだった。\n",
+        "これまで学んできた型 type と関数 function は言語に始めから組み込まれているものだった。\n",
         "\n",
-        "しかし、Pythonの利点はPythonのために書かれ、データサイエンスなどで利用される高品質のライブラリーがたくさんあることである。\n",
+        "しかし、Python の利点は Python のために書かれ、データサイエンスなどで利用される高品質のライブラリーがたくさんあることである。\n",
         "\n",
-        "そのいくつかは標準ライブラリーで、Pythonの動く環境ならば必ずあるが、それ以外はかならずしもPythonと一緒ではないが、簡単に加えることができる。\n",
+        "そのいくつかは標準ライブラリーで、Pythonの動く環境ならば必ずあるが、それ以外はかならずしも Python と一緒ではないが、簡単に加えることができる。\n",
         "\n",
-        "いずれにせよ、`import`によってライブラリーにアクセスすることになる。\n"
+        "いずれにせよ、 import によってライブラリーにアクセスすることになる。\n",
+        "</br>\n",
+        "</br>\n"
       ]
     },
     {
@@ -103,7 +105,9 @@
         "colab_type": "text"
       },
       "source": [
-        "`math`はモジュールで、モジュールとは変数の集まり(ネームスペースと呼ばれる)のことである。関数`dir()`を使うと`math`で使われるすべての`name`を見ることができる。"
+        " math はモジュールで、モジュールとは変数の集まり(ネームスペースと呼ばれる)のことである。関数 dir() を使うと math で使われるすべての name を見ることができる。\n",
+        "</br>\n",
+        "</br>"
       ]
     },
     {
@@ -156,7 +160,9 @@
         "colab_type": "text"
       },
       "source": [
-        "これらの変数にはドット・シンタクスでアクセスすることができる。いくつかは単純な値の変数でたとえば`math.pi`がある。"
+        "これらの変数にはドット・シンタクスでアクセスすることができる。いくつかは単純な値の変数でたとえば math.pi がある。\n",
+        "</br>\n",
+        "</br>"
       ]
     },
     {
@@ -191,7 +197,9 @@
         "colab_type": "text"
       },
       "source": [
-        "しかし、モジュールのほとんどは関数であり、たとえば`math.log`がある。"
+        "しかし、モジュールのほとんどは関数であり、たとえば math.log がある。\n",
+        "</br>\n",
+        "</br>"
       ]
     },
     {
@@ -231,7 +239,9 @@
         "colab_type": "text"
       },
       "source": [
-        "もし、`math.log`がなにをするかわからなければ`help()`を呼び出す。"
+        "もし、 math.log がなにをするかわからなければ help() を呼び出す。\n",
+        "</br>\n",
+        "</br>"
       ]
     },
     {
@@ -273,7 +283,9 @@
         "colab_type": "text"
       },
       "source": [
-        "モジュールそのもの`help()`を呼び出すこともできる。モジュール自体の高度な説明と、すべての関数と変数のドキュメントが得られる。"
+        "モジュールそのもの help() を呼び出すこともできる。モジュール自体の高度な説明と、すべての関数と変数のドキュメントが得られる。\n",
+        "</br>\n",
+        "</br>"
       ]
     },
     {
@@ -296,7 +308,19 @@
         "colab_type": "text"
       },
       "source": [
-        "モジュールの関数を頻繁に呼び出すなら、モジュール名の`alias`を`import`時に決めるとタイプの数を少し減らすことができる。"
+        "モジュールの関数を頻繁に呼び出すなら、モジュール名の alias を import 時に決めるとタイプの数を少し減らすことができる。\n",
+        "</br>\n",
+        "</br>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oJS42mWFoWlB",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
