Colaboratory を使用して作成しました

--- a/haskell01.ipynb
+++ b/haskell01.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPagKHZzWFIAXXO/3dZ060U",
+      "authorship_tag": "ABX9TyO4r+1ivQg+RwjnDIixhbLt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,10 +39,21 @@
         "1. プログラムについて、Haskell と Python の両方で動かすことによって理解を深める。\n",
         "1. とりあえずは Haskell の入門書や入門サイトからサンプルプログラムを入力してみる。\n",
         "1. https://wiki.haskell.org/Haskell入門_5ステップ\n",
-        "1. 10分で学ぶHaskell (https://wiki.haskell.org/10分で学ぶHaskell) <= いまここ\n",
-        "1. Learn You A Haskell For Great Good! (http://learnyouahaskell.com/)\n",
+        "1. 10分で学ぶHaskell (https://wiki.haskell.org/10分で学ぶHaskell)\n",
+        "1. Learn You A Haskell For Great Good! (http://learnyouahaskell.com/)  <= いまここ\n",
         "1. A Gentle Introduction to Haskell (https://www.haskell.org/tutorial/)\n",
         "1. Yet Another Haskell Tutorial (http://users.umiacs.umd.edu/~hal/docs/daume02yaht.pdf)\n",
+        "1. https://wiki.haskell.org/How_to_work_on_lists\n",
+        "1. https://wiki.haskell.org/Applications_and_libraries/Data_structures\n",
+        "1. https://wiki.haskell.org/Applications_and_libraries/Concurrency_and_parallelism\n",
+        "1. https://wiki.haskell.org/Applications_and_libraries/GUI_libraries\n",
+        "1. https://wiki.haskell.org/Applications_and_libraries/Network\n",
+        "1. https://wiki.haskell.org/QuickCheck\n",
+        "1. https://wiki.haskell.org/HUnit_1.0_User%27s_Guide\n",
+        "1. https://wiki.haskell.org/Regex_Posix\n",
+        "\n",
+        "\n",
+        "\n",
         "</br>\n",
         "</br>\n"
       ]
@@ -976,7 +987,11 @@
         "colab_type": "text"
       },
       "source": [
-        "# リスト"
+        "# リスト\n",
+        "\n",
+        "Haskell のリストは型の混在はなし。 型を混在させるにはタプルを用いる。\n",
+        "\n",
+        "文字列は単に文字 Char のリスト。"
       ]
     },
     {
@@ -987,10 +1002,359 @@
         "colab": {}
       },
       "source": [
-        ""
+        "Prelude> [1, 2, 3]\n",
+        "[1,2,3]\n",
+        "Prelude> [1 .. 5]\n",
+        "[1,2,3,4,5]\n",
+        "Prelude> [1, 3 .. 10]\n",
+        "[1,3,5,7,9]\n",
+        "Prelude> [True, False, True]\n",
+        "[True,False,True]\n",
+        "\n",
+        "Prelude> ['H', 'e', 'l', 'l', 'o']\n",
+        "\"Hello\"\n",
+        "\n",
+        "# Lisp の cons 関数に当たる `:`\n",
+        "\n",
+        "Prelude> 'C' : ['H', 'e', 'l', 'l', 'o']\n",
+        "\"CHello\""
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IJcQNo4G2TJJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "# タプル"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PRZJdUhP2-8w",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> (1, True)\n",
+        "(1,True)\n",
+        "Prelude> zip [1 .. 5] ['a' .. 'e']\n",
+        "[(1,'a'),(2,'b'),(3,'c'),(4,'d'),(5,'e')]\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QnhmYQLP3KFy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> :t ['a' .. 'c']\n",
+        "['a' .. 'c'] :: [Char]\n",
+        "Prelude> :t [('x', True), ('y', False)]\n",
+        "[('x', True), ('y', False)] :: [(Char, Bool)]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yArbCM1L3L1Q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> fst (1, 2)\n",
+        "1\n",
+        "Prelude> snd (1, 2)\n",
+        "2\n",
+        "Prelude> map fst [(1, 2), (3, 4), (5, 6)]\n",
+        "[1,3,5]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UOWi2Qe_5KxD",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 関数定義"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BEE6hOyJ5NQR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "-- Test.hs\n",
+        "module Main where\n",
+        "\n",
+        "factorial n = if n == 0 then 1 else n * factorial (n - 1)\n",
+        "\n",
+        "main = do putStrLn \"What is 5! ?\"\n",
+        "          x <- readLn\n",
+        "          if x == factorial 5\n",
+        "              then putStrLn \"You're right!\"\n",
+        "              else putStrLn \"You're wrong!\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5uBBmlwM5WJZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "ghc --make Test.hs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RLUm1DaB5YTk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "$ ./Test\n",
+        "What is 5! ?\n",
+        "120\n",
+        "You're right!"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o22NOUIZ5aYf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "$ ghci Test.hs\n",
+        "GHCi, version 8.6.5: http://www.haskell.org/ghc/  :? for help\n",
+        "[1 of 1] Compiling Main             ( test.hs, interpreted )\n",
+        "Ok, one module loaded.\n",
+        "*Main> factorial 4\n",
+        "24\n",
+        "*Main> main\n",
+        "What is 5! ?\n",
+        "100\n",
+        "You're wrong!\n",
+        "*Main> :t factorial\n",
+        "factorial :: (Eq p, Num p) => p -> p\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ajXsLOal5uxz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "factorial 0 = 1\n",
+        "factorial n = n * factorial (n - 1)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Zu-Sa_a36AAC",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 便利な構文"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Gmg_4nAo6CoH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "secsToWeeks secs = let perMinute = 60\n",
+        "                       perHour   = 60 * perMinute\n",
+        "                       perDay    = 24 * perHour\n",
+        "                       perWeek   =  7 * perDay\n",
+        "                   in  secs / perWeek"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M67kE5oy6ZKp",
+        "colab_type": "text"
+      },
+      "source": [
+        "上コードセルで、let , in は一時的な名前を定義している。\n",
+        "\n",
+        "`{}` と `:` による定義もできる。 check_later"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XN5488-c6Xtm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "classify age = case age of 0 -> \"newborn\"\n",
+        "                           1 -> \"infant\"\n",
+        "                           2 -> \"toddler\"\n",
+        "                           _ -> \"senior citizen\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cp5ZgVAk68_H",
+        "colab_type": "text"
+      },
+      "source": [
+        "上のセルで、case 式を使っている。 `_` はその他すべてを表す。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q-LIDxck97kv",
+        "colab_type": "text"
+      },
+      "source": [
+        "# ライブラリの使い方 import qualified as"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4LPJq0oa9bO8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "-- qualified.hs\n",
+        "module Main where\n",
+        "\n",
+        "import qualified Data.Map as M\n",
+        "\n",
+        "errorsPerLine = M.fromList\n",
+        "    [ (\"Chris\", 472), (\"Don\", 100), (\"Simon\", -5) ]\n",
+        "\n",
+        "main = do putStrLn \"Who are you?\"\n",
+        "          name <- getLine\n",
+        "          case M.lookup name errorsPerLine of\n",
+        "              Nothing -> putStrLn \"I don't know you\"\n",
+        "              Just n  -> do putStr \"Errors per line: \"\n",
+        "                            print n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zV0Gpb__-GwF",
+        "colab_type": "text"
+      },
+      "source": [
+        "標準ライブラリにないものを使う場合は\n",
+        "\n",
+        "1. http://hackage.haskell.org/packages/hackage.html\n",
+        "1. https://wiki.haskell.org/Applications_and_libraries\n",
+        "\n",
+        "からダウンロードして\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8S8lp-j_-dON",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        " runhaskell Setup configure\n",
+        " runhaskell Setup build\n",
+        " runhaskell Setup install"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u-Agmwju-f-_",
+        "colab_type": "text"
+      },
+      "source": [
+        "省いたトピック\n",
+        "\n",
+        "* List comprehensions https://wiki.haskell.org/List_comprehension\n",
+        "* Type synonyms https://wiki.haskell.org/Type#Type_and_newtype\n",
+        "* https://wiki.haskell.org/Type\n",
+        "* https://wiki.haskell.org/Newtype\n",
+        "* https://wiki.haskell.org/Infix_operator\n",
+        "* Lambda abstractions https://wiki.haskell.org/Lambda_abstraction\n",
+        "* https://wiki.haskell.org/Section_of_an_infix_operator\n",
+        "* Monads https://wiki.haskell.org/Category:Monad\n",
+        "* File I/O https://wiki.haskell.org/Tutorials/Programming_Haskell/String_IO\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V01fOAB7AYN_",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "05q0I6VCAal4",
+        "colab_type": "text"
+      },
+      "source": [
+        "# ここから  Learn You A Haskell For Great Good!"
+      ]
     }
   ]
 }
