--- a/mathwithpython01.ipynb
+++ b/mathwithpython01.ipynb
@@ -35,7 +35,6 @@
     "colab": {
       "name": "mathwithpython01.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -59,13 +58,13 @@
       "source": [
         "# メモ\n",
         "\n",
-        "1. ハードディスクの中に`mathwithpython01.ipynb`というのがあったので、見ているところ。\n",
-        "1. `Colab`で実験しながら読むことを想定したノートブックとする。\n",
-        "1. `LaTeX`、`%%latex`で数式を書く方法は、このノートブックと同じレポジトリーにある`learninglatex.ipynb`を駆け足で読むとよい。\n",
-        "1. 本家`SymPy Tutorial` (https://docs.sympy.org/latest/tutorial/index.html#tutorial)\n",
+        "1. ハードディスクの中に mathwithpython01.ipynb というのがあったので、見ているところ。\n",
+        "1. Colab で実験しながら読むことを想定したノートブックとする。\n",
+        "1. LaTeX、%%latex で数式を書く方法は、このノートブックと同じレポジトリーにある learninglatex.ipynb を駆け足で読むとよい。\n",
+        "1. 本家 SymPy Tutorial  (https://docs.sympy.org/latest/tutorial/index.html#tutorial)\n",
         "1. 入力例で学ぶPython(SymPy)の使い方(入門) (https://pianofisica.hatenablog.com/entry/2019/04/04/183712)\n",
-        "1. `Doing Math With Python` PDF ( http://index-of.es/Varios-2/Doing%20Math%20with%20Python.pdf)\n",
-        "1. `Doing Math With Python` site (http://www.nostarch.com/doingmathwithpython/ )"
+        "1. Doing Math With Python PDF ( http://index-of.es/Varios-2/Doing%20Math%20with%20Python.pdf)\n",
+        "1. Doing Math With Python site (http://www.nostarch.com/doingmathwithpython/ )"
       ]
     },
     {
@@ -79,12 +78,42 @@
         "\n",
         "数学と言っても広い話で、調べながらいろんな話題に進んでしまうとは思うものの、とりあえず思いついたことを書いておくと、興味の対象がわかっていいと思うので書いておく。\n",
         "\n",
-        "1. 数式。数学において数式を数学の世界で普通なように書くことは大事だと思う。$x^2$を `x**2` と書くとき、何が違うかというとフォントが違う、記号が違う。いまは$¥LaTeX$で書いたが、フォントと記号は満足させたが、こんどは記号の持つ意味合いから離れてしまっている。\n",
-        "1. 数式演算。$x$に数を代入することはプログラミングでできて、手続き的にいろいろ複雑な計算もできるが、数式を数式自体で操作して、概念を抽象化して考えることが数学の本質の一部である。この辺が `sympy` なのだろうが、どこまでできるのか。\n",
-        "1. 普通の四則演算。日常的に例えば、足し算をしたいとするとき、`sum([123, 456, 789])` と書くが、`numpy` とかを使えば、いろんなことが簡単に計算できるのか。\n",
-        "1. Colabではテキストセルでは$¥LaTeX$、コードセルでは `sympy` で書くが、セルコマンドの `%%latex` も併用する。\n",
+        "1. 数式。数学において数式を数学の世界で普通なように書くことは大事だと思う。$x^2$を `x**2` と書くとき、何が違うかというとフォントが違う、記号が違う。いまは$ ¥LaTeX$ で書いたが、フォントと記号は満足させたが、こんどは記号の持つ意味合いから離れてしまっている。\n",
+        "1. 数式演算。$x$ に数を代入することはプログラミングでできて、手続き的にいろいろ複雑な計算もできるが、数式を数式自体で操作して、概念を抽象化して考えることが数学の本質の一部である。この辺が  sympy なのだろうが、どこまでできるのか。\n",
+        "1. 普通の四則演算。日常的に例えば、足し算をしたいとするとき、python で `sum([123, 456, 789])` と書くが、numpy を使えば、どんなことが簡単に計算できるのか。\n",
+        "1. Colab ではテキストセルでは$¥LaTeX$、コードセルでは sympy で書くが、セルコマンドの `%%latex` も併用する。\n",
         "1. 図はどうするのか。`matplotlib` で描くのか。\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oUJ6Cs7e4-Pa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9322a462-bfcd-427f-ecde-ac743a099ce8"
+      },
+      "source": [
+        "sum ([12,34])"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "46"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
       ]
     },
     {
@@ -5729,7 +5758,7 @@
         "a = numpy.arange(10)\n",
         "a"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5789,7 +5818,7 @@
       "source": [
         "range(0, 10)[3]"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5848,7 +5877,7 @@
       "source": [
         "list(a)"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5878,7 +5907,7 @@
       "source": [
         "list(range(0, 10))"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5912,7 +5941,7 @@
         "f = lambdify(x, expr, \"numpy\")\n",
         "f(a)"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5944,7 +5973,7 @@
         "f = lambdify(x, expr, \"math\")\n",
         "f(0.1)"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5972,7 +6001,7 @@
       "source": [
         "lambdify?"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
